syntax = "proto3";
package MsgPB;

message GameRoomPlayerInfo{
    uint32 m_playerId = 1;
    string m_name = 2;
    int32 m_bodyViewData = 3;
}

enum GameRoomPlayerLoginType{
    PLAY = 0;
    VIEW = 1;
}
message GameRoomPlayerLoginC2S{
    uint32 m_playerId = 1;
    GameRoomPlayerLoginType m_loginType = 2;
}


message GameRoomPlayerLoginS2C{
    bool m_loginSuccess = 1;
    uint32 m_playerId = 2;
    int64 m_key = 3;
}